k3s/tailchat.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tailchat
  namespace: gic-chathub
spec:
  selector:
    matchLabels:
      app: tailchat
  serviceName: tailchat
  replicas: 3
  template:
    metadata:
      labels:
        app: tailchat
    spec:
      containers:
      - name: tailchat
        image: moonrailgun/tailchat
        ports:
        - containerPort: 11000
        livenessProbe:
          httpGet:
            path: /health
            port: 11000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 11000
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 2
          failureThreshold: 3
        resources:
          requests:
            cpu: 50m
            memory: 51Mi
          limits:
            cpu: 500m
            memory: 256Mi
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: "kubernetes.io/hostname"
            labelSelector:
              matchLabels:
                app: tailchat
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: "kubernetes.io/hostname"
            labelSelector:
              matchLabels:
                app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: tailchat
  namespace: gic-chathub
spec:
  type: ClusterIP
  selector:
    app: tailchat
  ports:
    - protocol: TCP
      port: 11000
      targetPort: 11000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: gic-chathub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: registry.deti/gic-chathub/nginx:latest
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: "kubernetes.io/hostname"
            labelSelector:
              matchLabels:
                app: nginx
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: "kubernetes.io/hostname"
            labelSelector:
              matchLabels:
                app: tailchat
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: gic-chathub
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
