k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gic-chathub-ingress
  namespace: gic-chathub
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: website.gic-chathub.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-service
                port:
                  number: 80
    - host: app.gic-chathub.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tailchat
                port:
                  number: 11000
    - host: prometheus.gic-chathub.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090   
    - host: grafana.gic-chathub.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
